--- a/package.json
+++ b/package.json
@@ -190,7 +190,7 @@
         "clean": "rimraf out && rimraf lib && rimraf vscode-lingua-franca-*.vsix",
         "transpile": "webpack",
         "vscode:prepublish": "npm run transpile",
-        "compile": "cd ./editor-support/lfwasm && make && cd ../.. && rm -rf ./lfw-pkg && move-cli ./editor-support/lfwasm/pkg ./lfw-pkg && ./write-version-to-file.sh src/extension_version.ts && npm run transpile",
+        "compile": "cd ./editor-support/lfwasm && bash make && cd ../.. && rm -rf ./lfw-pkg && move-cli ./editor-support/lfwasm/pkg ./lfw-pkg && ./write-version-to-file.sh src/extension_version.ts && npm run transpile",
         "watch": "npm run transpile --watch",
         "build": "npx ts-node src/build_lds.ts",
         "compile-tests": "npm run compile && npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
@@ -199,9 +199,9 @@
         "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
         "install": "npm run clean && npm run build && npm run package && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
-        "test-dependencies-outdated": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=outdated",
-        "test-dependencies-missing-basic": "if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else npm run compile-tests && mv $HOME/.cargo $HOME/.cargo.bak && node ./out/test/test/test_runner.js --dependencies=missing0; fi",
-        "test-dependencies-missing-extended": "if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else npm run compile-tests && mv $HOME/.cargo $HOME/.cargo.bak && node ./out/test/test/test_runner.js --dependencies=missing1; fi",
+        "test-dependencies-outdated": "if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else npm run compile-tests && rustup default 1.26.0 && node ./out/test/test/test_runner.js --dependencies=outdated; fi",
+        "test-dependencies-missing-basic": "if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else npm run compile-tests && move-cli $HOME/.cargo $HOME/.cargo.bak && node ./out/test/test/test_runner.js --dependencies=missing0; fi",
+        "test-dependencies-missing-extended": "if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else npm run compile-tests && move-cli $HOME/.cargo $HOME/.cargo.bak && node ./out/test/test/test_runner.js --dependencies=missing1; fi",
         "test-syntax": "npm run compile-tests && npx mocha out/test/test/check_highlighting.test.js --ui tdd --reporter-option maxDiffSize=0",
         "update-known-good": "rm -rf test/known-good && npm run compile-tests && npx mocha out/test/test/check_highlighting.test.js --ui tdd",
         "amend-jar": "./uf.py"
