--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
         "vscode-languageclient": "^6.1.3"
     },
     "scripts": {
-        "clean": "rimraf out && rimraf lib && rimraf vscode-lingua-franca-*.vsix",
+        "clean": "rimraf out && rimraf lib && rimraf lingua-franca/lsp/build && rimraf vscode-lingua-franca-*.vsix",
         "transpile": "webpack",
         "vscode:prepublish": "npm run compile",
         "compile": "cd ./editor-support/lfwasm && make && cd ../.. && rimraf ./lfw-pkg && move-cli ./editor-support/lfwasm/pkg ./lfw-pkg && bash ./write-version-to-file.sh src/extension_version.ts && npm run transpile",
