--- a/package.json
+++ b/package.json
@@ -278,7 +278,13 @@
                     "name": ""
                 }
               ]
-        }
+        },
+        "viewsWelcome": [
+            {
+              "view": "lf-lang-projects",
+              "contents": "No Lingua Franca project found. [Learn more](https://www.lf-lang.org/docs/) about setting up a Lingua Franca project structure.\n[Refresh](command:linguafranca.refreshEntries)"
+            }
+          ]
     },
     "devDependencies": {
         "@types/chai": "^4.3.1",
