--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Build the extension
         uses: ./.github/actions/build
       - name: Run tests (Linux)
-        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test
+        # Formerly: run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test
+        run: xvfb-run -a -n 99 --server-args="-screen 0 1280x960x24" -- npm run test
         if: ${{ runner.os == 'Linux' }}
       - name: Run tests (non-Linux)
         run: npm run test
