--- a/package.json
+++ b/package.json
@@ -315,7 +315,7 @@
         "compile": "cd ./editor-support/lfwasm && make && cd ../.. && rimraf ./lfw-pkg && move-cli ./editor-support/lfwasm/pkg ./lfw-pkg && bash ./write-version-to-file.sh src/extension_version.ts && npm run transpile",
         "watch": "npm run transpile --watch",
         "build": "npx ts-node src/build_lds.ts",
-        "compile-tests": "npm run compile && npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
+        "compile-tests": "npm run compile && npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap && node -e \"const fs=require('fs');const pkg=JSON.stringify({name:'vscode-lingua-franca-test',version:'0.10.1',description:'Test package for Lingua Franca VS Code extension',main:'test/index.js',engines:{vscode:'^1.63.0'},dependencies:{'@vscode/test-electron':'^2.3.9','mocha':'^10.0.0','chai':'^4.3.4','chai-spies':'^1.0.0'}},null,2);fs.writeFileSync('out/test/package.json',pkg);\"",
         "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "package-pre-release": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package --pre-release; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
