--- a/package.json
+++ b/package.json
@@ -320,8 +320,8 @@
         "package-pre-release": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package --pre-release; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
         "deploy-cursor": "echo \"Y\r\n\" | cursor --install-extension vscode-lingua-franca-*.vsix --force",
-        "install-extension": "npm run clean && npm run build && npm run package && npm run deploy",
-        "install-extension-cursor": "npm run clean && npm run build && npm run package && npm run deploy-cursor",
+        "install-extension": "npm run clean && npm run build && cd ./editor-support/lfwasm && make && cd ../.. && npm run package && npm run deploy",
+        "install-extension-cursor": "npm run clean && npm run build && cd ./editor-support/lfwasm && make && cd ../.. && npm run package && npm run deploy-cursor",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
         "test-dependencies-outdated": "bash -c \"if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else false; fi\" || npm run compile-tests && rustup default 1.26.0 && node ./out/test/test/test_runner.js --dependencies=outdated;",
         "test-dependencies-missing-basic": "bash -c \"if [ -z ${LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS+x} ]; then echo 'If you are sure that you want to run a test which may uninstall binaries from your machine, set the environment variable LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS' ; else false; fi\" || npm run compile-tests && (move-cli $INIT_CWD/../../../.cargo $INIT_CWD/../../../.cargo.bak || move-cli C:\\Users\\runneradmin\\.cargo C:\\Users\\runneradmin\\.cargo.bak) && node ./out/test/test/test_runner.js --dependencies=missing0",
